# finlab

./: .gitignore  README.md  pyproject.toml
api/services/: agent.py
evaluations/: level-3-human-annonation.py  level-4-llm-as-judge.py
guardrails/: guardrails-demo-2.py
ingestion/: create-collection.py  ingestion.py
ingestion/utils/: semantic_chunker.py
