[project]
name = "finlab"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edgartools>=5.31.3",
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "hdbscan>=0.8.43",
    "instructor>=1.15.1",
    "langfuse>=4.6.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "qdrant-client[fastembed]>=1.18.0",
    "sentence-transformers>=5.5.0",
    "trafilatura>=2.0.0",
    "transformers>=5.8.1",
    "uvicorn>=0.47.0",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
]
